findbugs, checkstyle and pmd goofing around